@@ -7,6 +7,9 @@
     Make 6 channel Sinc conversion another special case.
     Use Duff's Device to speed up the multi-channel case.
 
+    * tests/multi_channel_test.c
+    Only test 1, 2 and 3 channels for ZOH and linear converters.
+
 2008-12-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/samplerate.c
